# Corten-NetworkStack

./: .gitignore  Cargo.toml  FINAL-COMPLETION-REPORT.md  GIT-PUSH-STATUS.md  ORCHESTRATION-COMPLETE.md  PHASE2-PROGRESS-SUMMARY.md  create_components.py  network-stack-specification.md  test_server.py
components/bandwidth_limiter/: Cargo.toml  IMPLEMENTATION_COMPLETE.md  README.md
components/bandwidth_limiter/src/: conditions.rs  lib.rs  limiter.rs  tracker.rs
components/bandwidth_limiter/tests/integration/: test_realistic_scenarios.rs
components/bandwidth_limiter/tests/unit/: test_limiter.rs
components/certificate_pinning/: Cargo.toml  README.md
components/certificate_pinning/src/: lib.rs
components/certificate_pinning/tests/integration/: test_integration.rs
components/certificate_pinning/tests/unit/: mod.rs  test_pinner.rs
components/certificate_transparency/: Cargo.toml  README.md
components/certificate_transparency/src/: lib.rs  policy.rs  sct.rs  verifier.rs
components/certificate_transparency/tests/integration/: test_ct_integration.rs
components/certificate_transparency/tests/unit/: test_verifier.rs
components/content_encoding/: Cargo.toml  Cargo.toml.standalone  README.md
components/content_encoding/src/: brotli_impl.rs  deflate.rs  gzip.rs  lib.rs  stream.rs
components/content_encoding/tests/integration/: integration_tests.rs
components/content_encoding/tests/unit/: encoding_tests.rs  mod.rs  streaming_tests.rs
components/cookie_manager/: CLAUDE.md  Cargo.toml  README.md
components/cookie_manager/src/: jar.rs  lib.rs  parser.rs  store.rs
components/cookie_manager/tests/integration/: mod.rs
components/cookie_manager/tests/unit/: mod.rs  test_cookie_jar.rs  test_cookie_store.rs  test_parser.rs
components/cors_validator/: Cargo.toml  README.md
components/cors_validator/src/: headers.rs  lib.rs  policy.rs  preflight.rs  validator.rs
components/cors_validator/tests/integration/: mod.rs  test_cors_workflows.rs
components/cors_validator/tests/unit/: mod.rs  test_cors_validator.rs  test_headers.rs  test_preflight.rs
components/dns_resolver/: CLAUDE.md  Cargo.toml  README.md
components/dns_resolver/src/: lib.rs  resolver.rs
components/dns_resolver/tests/integration/: mod.rs
components/dns_resolver/tests/unit/: mod.rs
components/ftp_protocol/: Cargo.toml  README.md
components/ftp_protocol/src/: client.rs  commands.rs  lib.rs  responses.rs
components/ftp_protocol/tests/integration/: mod.rs
components/ftp_protocol/tests/unit/: mod.rs  test_client.rs  test_commands.rs  test_responses.rs
components/http1_protocol/: CLAUDE.md  Cargo.toml  README.md
components/http1_protocol/src/: lib.rs
components/http1_protocol/tests/integration/: mod.rs
components/http1_protocol/tests/unit/: mod.rs  test_curl_behavior.rs
components/http2_protocol/: CLAUDE.md  Cargo.toml  README.md
components/http2_protocol/src/: client.rs  config.rs  connection.rs  error.rs  lib.rs
components/http2_protocol/tests/integration/: mod.rs
components/http2_protocol/tests/unit/: mod.rs  test_client.rs  test_config.rs  test_connection.rs
components/http3_protocol/: CLAUDE.md  Cargo.toml  README.md
components/http3_protocol/src/: client.rs  config.rs  connection.rs  error.rs  lib.rs
components/http3_protocol/tests/integration/: mod.rs
components/http3_protocol/tests/unit/: mod.rs
components/http_cache/: CLAUDE.md  Cargo.toml  README.md
components/http_cache/src/: lib.rs
components/http_cache/tests/integration/: mod.rs
components/http_cache/tests/unit/: mod.rs
components/mixed_content_blocker/: Cargo.toml  README.md
components/mixed_content_blocker/src/: lib.rs
components/mixed_content_blocker/tests/integration/: test_integration.rs
components/mixed_content_blocker/tests/unit/: test_blocker.rs
components/network_errors/: CLAUDE.md  Cargo.toml  README.md
components/network_errors/src/: lib.rs
components/network_errors/tests/integration/: mod.rs
components/network_errors/tests/unit/: mod.rs
components/network_stack/: CLAUDE.md  COMPILATION-STATUS.md  Cargo.toml  README.md
components/network_stack/src/: config.rs  lib.rs  stack_impl.rs
components/network_stack/tests/integration/: mod.rs  test_phase2_integration.rs
components/network_stack/tests/unit/: mod.rs  test_config.rs  test_network_stack.rs  test_protocol_routing.rs
components/network_types/: CLAUDE.md  Cargo.toml  README.md
components/network_types/src/: lib.rs
components/network_types/tests/integration/: mod.rs
components/network_types/tests/unit/: mod.rs  test_cache_mode.rs  test_credentials_mode.rs  test_http_method.rs  (+10 more)
components/performance_benchmarks/: Cargo.toml  README.md
components/performance_benchmarks/src/: formatter.rs  lib.rs  runner.rs  stats.rs
components/platform_integration/: Cargo.toml  README.md
components/platform_integration/src/: certs.rs  lib.rs  network.rs  proxy.rs
components/proxy_support/: Cargo.toml  README.md
components/proxy_support/src/: auth.rs  http_proxy.rs  lib.rs  socks5.rs
components/tls_manager/: CLAUDE.md  Cargo.toml  README.md
components/tls_manager/src/: lib.rs
components/url_handlers/: Cargo.toml  README.md
components/url_handlers/src/: data.rs  file.rs  lib.rs  security.rs
components/url_handlers/tests/: data_url_tests.rs  file_integration_tests.rs  file_url_tests.rs
components/webrtc_channels/: CLAUDE.md  Cargo.toml  README.md
components/webrtc_channels/src/: lib.rs
components/webrtc_peer/: CLAUDE.md  Cargo.toml  README.md
components/webrtc_peer/src/: lib.rs  stats.rs
components/websocket_protocol/: CLAUDE.md  Cargo.toml  README.md
components/websocket_protocol/src/: lib.rs
components/wpt_harness/: Cargo.toml  README.md
components/wpt_harness/src/: cors_tests.rs  csp_tests.rs  http_tests.rs  lib.rs
tests/integration/: ARCHITECTURE-MAP.md  Cargo.toml  TEST-RESULTS.md  lib.rs  test_cache_http.rs  test_cookie_http.rs  test_curl_compat.rs  test_data.rs  test_dns_tls_http.rs  test_helpers.rs  test_network_stack.rs  test_network_stack_integration.rs  test_websocket.rs
(+91 files in other folders)
