[workspace]
members = [
    # Level 0: Base
    "components/network_types",
    "components/network_errors",

    # Level 1: Core (existing)
    "components/dns_resolver",
    "components/tls_manager",
    "components/cookie_manager",
    "components/http_cache",

    # Level 1: Core (new - Phase 2)
    "components/proxy_support",
    "components/cors_validator",
    "components/content_encoding",
    "components/request_scheduler",
    "components/bandwidth_limiter",
    "components/url_handlers",
    "components/certificate_transparency",
    "components/mixed_content_blocker",
    "components/csp_processor",
    "components/certificate_pinning",
    "components/network_metrics",
    "components/platform_integration",

    # Level 2: Protocol (existing)
    "components/http1_protocol",
    "components/http2_protocol",
    "components/http3_protocol",
    "components/websocket_protocol",
    "components/webrtc_peer",
    "components/webrtc_channels",

    # Level 2: Protocol (new - Phase 2)
    "components/ftp_protocol",

    # Level 2: Testing (new - Phase 2)
    "components/wpt_harness",
    "components/performance_benchmarks",

    # Level 3: Integration
    "components/network_stack",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["CortenBrowser Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Shared dependencies across all components
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
bytes = "1.5"
futures = "0.3"
url = "2.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
