[package]
name = "bandwidth_limiter"
version = "0.1.0"
edition = "2021"

[dependencies]
network_types = { path = "../network_types" }
network_errors = { path = "../network_errors" }
tokio = { version = "1.35", features = ["time", "sync", "macros"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }

[lib]
path = "src/lib.rs"
