[package]
name = "certificate_pinning"
version.workspace = true
edition.workspace = true

[dependencies]
network-types = { path = "../network_types" }
network-errors = { path = "../network_errors" }
sha2 = "0.10"

[dev-dependencies]

[lib]
path = "src/lib.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
