[package]
name = "cookie-manager"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
network-types = { path = "../network_types" }
network-errors = { path = "../network_errors" }
cookie = "0.18"
cookie_store = "0.20"
url = "2.5"
tokio = { version = "1.35", features = ["full"] }
time = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
