[package]
name = "dns-resolver"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
network-types = { path = "../network_types" }
network-errors = { path = "../network_errors" }
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls"] }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
