[package]
name = "mixed_content_blocker"
version.workspace = true
edition.workspace = true

[dependencies]
network-errors = { path = "../network_errors" }
url.workspace = true

[lib]
path = "src/lib.rs"

[[test]]
name = "unit"
path = "tests/unit/test_blocker.rs"

[[test]]
name = "integration"
path = "tests/integration/test_integration.rs"
