[package]
name = "network-stack"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Local component dependencies
network-types = { path = "../network_types" }
network-errors = { path = "../network_errors" }
dns-resolver = { path = "../dns_resolver" }
tls-manager = { path = "../tls_manager" }
cookie-manager = { path = "../cookie_manager" }
http-cache = { path = "../http_cache" }
http1-protocol = { path = "../http1_protocol" }
http2-protocol = { path = "../http2_protocol" }
http3-protocol = { path = "../http3_protocol" }
websocket-protocol = { path = "../websocket_protocol" }
webrtc-peer = { path = "../webrtc_peer" }
webrtc-channels = { path = "../webrtc_channels" }

# Phase 2 component dependencies
cors-validator = { path = "../cors_validator" }
content_encoding = { path = "../content_encoding" }
request-scheduler = { path = "../request_scheduler" }
bandwidth_limiter = { path = "../bandwidth_limiter" }
url_handlers = { path = "../url_handlers" }
mixed_content_blocker = { path = "../mixed_content_blocker" }
csp_processor = { path = "../csp_processor" }
proxy_support = { path = "../proxy_support" }
certificate_transparency = { path = "../certificate_transparency" }
certificate_pinning = { path = "../certificate_pinning" }
platform_integration = { path = "../platform_integration" }
ftp_protocol = { path = "../ftp_protocol" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization and types
serde = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# HTTP types (used in data URL and file URL handlers)
http = "1.0"

[dev-dependencies]
# Test dependencies
tokio-test = "0.4"
mockito = "1.2"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
