[package]
name = "platform_integration"
version.workspace = true
edition.workspace = true

[dependencies]
network-errors = { path = "../network_errors" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[lib]
path = "src/lib.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
