[package]
name = "tls-manager"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
network-types = { path = "../network_types" }
network-errors = { path = "../network_errors" }
rustls = "0.22"
tokio-rustls = "0.25"
webpki-roots = "0.26"
tokio = { version = "1.35", features = ["full"] }
rustls-pemfile = "2.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
