[package]
name = "websocket-protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
network-types = { path = "../network_types" }
network-errors = { path = "../network_errors" }
tls-manager = { path = "../tls_manager" }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
tokio = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
